--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "license": "ISC",
   "description": "RESTful API for ToDoList application",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "joi": "^17.13.3",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "4.1",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.2",
+    "node-pre-gyp": "^0.17.0"
   }
 }
