--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "4.1",
     "mongoose": "^8.7.2",
-    "node-pre-gyp": "^0.17.0"
+    "ms": "^2.1.3",
+    "node-pre-gyp": "^0.17.0",
+    "nodemon": "^3.1.7"
   }
 }
